maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:13: error: Boolean does not take parameters
  left()
      ^Escaper:20: error: Boolean does not take parameters
    left()
        ^