maze.lessons.maze.wallfollower.WallFollowerMaze.scala.code
override def run() {
  
  while (!isOverBaggle()){
    keepHandOnSideWall()
		forward()
  }
}



def keepHandOnSideWall(){
	var facing = isFacingWall()
  left()
  var left = isFacingWall()
  
  if (facing && left){
    right()
    right()
  }else if(facing){
    left()
  }
}